2008-11-03  Jürg Billeter  <j@bitron.ch>

	* gobject/Makefile.am:
	* gobject/valaccodebasemodule.vala:
	* gobject/valaccodedelegatemodule.vala:
	* gobject/valaccodedynamicpropertymodule.vala:
	* gobject/valaccodegenerator.vala:
	* gobject/valagerrormodule.vala:

	Add CCodeDelegateModule, move more code to GErrorModule

2008-11-03  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodebasemodule.vala:
	* gobject/valagasyncmodule.vala:
	* gobject/valagerrormodule.vala:

	Move code generation for try and yield statements to GErrorModule
	and GAsyncModule, resp.

2008-11-03  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodearraymodule.vala:
	* gobject/valaccodeassignmentmodule.vala:
	* gobject/valaccodebasemodule.vala:
	* gobject/valaccodedynamicpropertymodule.vala:
	* gobject/valaccodedynamicsignalmodule.vala:
	* gobject/valaccodegenerator.vala:
	* gobject/valaccodeinvocationexpressionmodule.vala:
	* gobject/valaccodememberaccessmodule.vala:
	* gobject/valaccodemethodmodule.vala:
	* gobject/valaccodemodule.vala:
	* gobject/valaccodestructmodule.vala:
	* gobject/valaclassregisterfunction.vala:
	* gobject/valadbusclientmodule.vala:
	* gobject/valadbusservermodule.vala:
	* gobject/valagasyncmodule.vala:
	* gobject/valagerrormodule.vala:
	* gobject/valagirwriter.vala:
	* gobject/valagobjectmodule.vala:
	* gobject/valagsignalmodule.vala:
	* gobject/valagtypemodule.vala:
	* gobject/valainterfaceregisterfunction.vala:
	* gobject/valatyperegisterfunction.vala:

	Move code generation to module

2008-11-03  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodearraymodule.vala:
	* gobject/valaccodebasemodule.vala:

	Move array helper functions to CCodeArrayModule

2008-11-03  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi:

	Fix fgets binding

2008-11-03  Ali Sabil  <ali.sabil@gmail.com>

	* vapi/packages/loudmouth-1.0/loudmouth-1.0.metadata:

	Mark lm_message_new.to as nullable, and unhide lm_connection_new

	* vapi/packages/loudmouth-1.0/loudmouth-1.0-custom.vala:
